Authentification started. Stil Thymeleaf association ToDo

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -11,7 +11,7 @@
                     <h2>Plots</h2>
                 </div>
                 <div class="map-panel">
-                    <div id="wind-speed"></div>
+                    <span th:text ="${#authentication}"></span>
                 </div>
 
             </div>
