--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org"
-      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
+      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
 <div th:replace="common/head :: head"></div>
 <div th:replace="common/header :: header"></div>
 <main>
@@ -11,7 +11,8 @@
                     <h2>Plots</h2>
                 </div>
                 <div class="map-panel">
-                    <span th:text ="${#authentication}"></span>
+                    Logged user: <span sec:authentication="name">Bob</span>
+                    Roles: <span sec:authentication="principal.authorities">[ROLE_USER, ROLE_ADMIN]</span>
                 </div>
 
             </div>
