--- a/src/main/resources/templates/MainCompany/editMainCompany.html
+++ b/src/main/resources/templates/MainCompany/editMainCompany.html
@@ -11,7 +11,7 @@
                     <h2>Add a Main Companies</h2>
                 </div>
                 <!--/*@thymesVar id="MainCompany" type="de.onetwotree.margaux.entity.MainCompany"*/-->
-                <form action="#" th:action="@{/maincompany/add/}" th:object="${MainCompany}" method="post" class="col s12">
+                <form action="#" th:action="@{/maincompany/add/}" th:object="${mainCompany}" method="post" class="col s12">
                     <div class="row">
                         <div class="input-field col l6 m6 s12">
                             <input id="mainCompanyName" type="text" class="validate" th:field="*{name}" />
