--- a/src/main/resources/templates/MainCompany/mainCompany.html
+++ b/src/main/resources/templates/MainCompany/mainCompany.html
@@ -19,7 +19,7 @@
                         </tr>
                     </thead>
                     <tbody>
-                            <tr th:each="maincompany : ${MainCompanies}">
+                            <tr th:each="maincompany : ${mainCompanyPage}">
                                     <td th:text="${maincompany.id}">undefined</td>
                                     <td th:text="${maincompany.name}">undefined</td>
                                     <td>
@@ -33,6 +33,15 @@
                             </tr>
                     </tbody>
                 </table>
+                <div th:fragment="pagination" class="row center-align">
+                    <ul class="pagination">
+                        <li class="disabled"><a href="#!"><i class="material-icons">chevron_left</i></a></li>
+                        <li th:each="i:${#numbers.sequence(0, mainCompanyPage.totalPages -1)}" class="waves-effect">
+                            <a th:href="@{${url}(page=${i+1})}" th:text="${i+1}"></a>
+                        </li>
+                        <li class="waves-effect"><a href="#!"><i class="material-icons">chevron_right</i></a></li>
+                    </ul>
+                </div>
             </div>
         </div>
     </div>
@@ -43,17 +52,6 @@
         </a>
     </div>
     <!-- end Add button-->
-    <!-- Modal Structure -->
-    <div id="modal1" class="modal">
-        <div class="modal-content">
-            <h4>Deleting Main Company ...</h4>
-            <p>Are you sure you want to delete this main company ?</p>
-        </div>
-        <div class="modal-footer">
-            <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Agree</a>
-        </div>
-    </div>
-    <!-- End Modal-->
 </main>
 
 <div th:replace="common/footer :: footer"></div>
