--- a/src/main/resources/templates/MainCompany/viewProjectsofMainCompany.html
+++ b/src/main/resources/templates/MainCompany/viewProjectsofMainCompany.html
@@ -33,14 +33,19 @@
                             <a th:href="@{'/project/view/' + ${project.id}}" class="btn-floating btn-small waves-effect waves-light">
                                 <i class="material-icons">visibility</i>
                             </a>
-                            <a th:href="@{'/project/view/' + ${project.id}}" class="btn-floating btn-small waves-effect waves-light">
-                                <i class="material-icons">edit</i>
-                            </a>
-                            <a class="waves-effect waves-light btn modal-trigger" th:href="'#modal1' + ${project.id}">Modal</a>
                         </td>
                     </tr>
                     </tbody>
                 </table>
+                <div th:fragment="pagination" class="row center-align">
+                    <ul class="pagination">
+                        <li class="disabled"><a href="#!"><i class="material-icons">chevron_left</i></a></li>
+                        <li th:each="i:${#numbers.sequence(0, projects.totalPages -1)}" class="waves-effect">
+                            <a th:href="@{${url}(page=${i+1})}" th:text="${i+1}"></a>
+                        </li>
+                        <li class="waves-effect"><a href="#!"><i class="material-icons">chevron_right</i></a></li>
+                    </ul>
+                </div>
             </div>
         </div>
     </div>
@@ -51,17 +56,6 @@
         </a>
     </div>
     <!-- end Add button-->
-    <!-- Modal Structure -->
-    <div id="modal1" class="modal">
-        <div class="modal-content">
-            <h4>Deleting Main Company ...</h4>
-            <p>Are you sure you want to delete this main company ?</p>
-        </div>
-        <div class="modal-footer">
-            <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Agree</a>
-        </div>
-    </div>
-    <!-- End Modal-->
 </main>
 
 <div th:replace="common/footer :: footer"></div>
