--- a/src/main/resources/templates/Project/project.html
+++ b/src/main/resources/templates/Project/project.html
@@ -10,35 +10,7 @@
                 <div class="panel_title">
                     <h2>Projects</h2>
                 </div>
-                <table class="bordered highlight responsive-table">
-                    <thead>
-                    <tr>
-                        <th>ID</th>
-                        <th>Name</th>
-                        <th>Begin date</th>
-                        <th>End Date</th>
-                        <th>Company</th>
-                        <th>Actions</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    <tr th:each="project : ${projects}">
-                        <td th:text="${project.id}">undefined</td>
-                        <td th:text="${project.name}">undefined</td>
-                        <td th:text="${project.beginDate != null} ? ${#temporals.format(project.beginDate,'dd/MM/yyyy')} : 'null value!'">undefined</td>
-                        <td th:text="${project.endDate != null} ?  ${project.endDate} : 'null value!'">undefined</td>
-                        <td th:text="${project.company.name}">undefined</td>
-                        <td>
-                            <a th:href="@{'/project/view/' + ${project.id}}" class="btn-floating btn-small waves-effect waves-light">
-                                <i class="material-icons">visibility</i>
-                            </a>
-                            <a th:href="@{'/project/update/' + ${project.id}}" class="btn-floating btn-small waves-effect waves-light">
-                                <i class="material-icons">edit</i>
-                            </a>
-                        </td>
-                    </tr>
-                    </tbody>
-                </table>
+                <div th:replace="common/sheetProject :: sheetProject"></div>
             </div>
         </div>
     </div>
