--- a/src/main/resources/templates/Project/updateProject.html
+++ b/src/main/resources/templates/Project/updateProject.html
@@ -12,6 +12,7 @@
                 </div>
                 <!--/*@thymesVar id="MainCompany" type="de.onetwotree.margaux.entity.MainCompany"*/-->
                 <form action="#" th:action="@{'/project/update/'+ ${project.id}}" th:object="${project}" th:method="post" class="col s12">
+                    <input type="hidden" th:field="*{id}"/>
                     <div class="row">
                         <div class="input-field col l6 m6 s12">
                             <input id="projectName" type="text" class="validate" th:field="*{name}" />
