--- a/src/main/resources/templates/Plot/addHarvestToPlot.html
+++ b/src/main/resources/templates/Plot/addHarvestToPlot.html
@@ -26,7 +26,7 @@
                     <div class="row">
                         <div class="input-field col l6 m6 s12">
                             <select th:field="*{resource}" class="input-field">
-                                <option id="resource" th:each="resource: ${resources}" th:value="${resource.id}" th:text="${resource.name}"></option>
+                                <option id="resource" th:each="resource: ${harvest.plot.plotResources}" th:value="${resource.resource.id}" th:text="${resource.resource.name}"></option>
                             </select>
                             <label for="resource">Resource</label>
                         </div>
