Implementing resource managment

--- a/src/main/resources/templates/common/header.html
+++ b/src/main/resources/templates/common/header.html
@@ -100,6 +100,21 @@
         <li class="bold">
             <ul class="collapsible collapsible-accordion">
                 <li>
+                    <a class="collapsible-header"><i class="petite material-icons">spa</i>Resource<i class="material-icons right">arrow_drop_down</i></a>
+                    <div class="collapsible-body">
+                        <ul>
+                            <li class="sub-menu"><a th:href="@{/resource/}">All</a></li>
+                            <li class="sub-menu"><a th:href="@{/resource/add/}">Add</a></li>
+                        </ul>
+                    </div>
+                </li>
+            </ul>
+        </li>
+        <!--End DropDown-->
+        <!--DropDown-->
+        <li class="bold">
+            <ul class="collapsible collapsible-accordion">
+                <li>
                     <a class="collapsible-header"><i class="petite material-icons">swap_calls</i>Harvests<i class="material-icons right">arrow_drop_down</i></a>
                     <div class="collapsible-body">
                         <ul>
