--- a/src/main/resources/templates/Resource/resource.html
+++ b/src/main/resources/templates/Resource/resource.html
@@ -25,15 +25,11 @@
                         <td th:text="${resource.name}">undefined</td>
                         <td th:text="${resource.resourceType.description}">undefined</td>
                         <td th:text="${resource.resourceType.unity.desc}">undefined</td>
-                        <!--<td>
-                            <a th:href="@{'/project/view/' + ${project.id}}" class="btn-floating btn-small waves-effect waves-light">
+                        <td>
+                            <a th:href="@{'/resource/view/' + ${resource.id}}" class="btn-floating btn-small waves-effect waves-light">
                                 <i class="material-icons">visibility</i>
                             </a>
-                            <a th:href="@{'/project/view/' + ${project.id}}" class="btn-floating btn-small waves-effect waves-light">
-                                <i class="material-icons">edit</i>
-                            </a>
-                            <a class="waves-effect waves-light btn modal-trigger" th:href="'#modal1' + ${project.id}">Modal</a>
-                        </td>-->
+                        </td>
                     </tr>
                     </tbody>
                 </table>
@@ -47,17 +43,6 @@
         </a>
     </div>
     <!-- end Add button-->
-    <!-- Modal Structure -->
-    <div id="modal1" class="modal">
-        <div class="modal-content">
-            <h4>Deleting Main Company ...</h4>
-            <p>Are you sure you want to delete this main company ?</p>
-        </div>
-        <div class="modal-footer">
-            <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Agree</a>
-        </div>
-    </div>
-    <!-- End Modal-->
 </main>
 
 <div th:replace="common/footer :: footer"></div>
