--- a/src/main/resources/templates/common/headerResource.html
+++ b/src/main/resources/templates/common/headerResource.html
@@ -4,13 +4,13 @@
 <div th:fragment="headerResource">
     <ul class="tabs tabs-fixed-width">
         <li class="tab col s2">
-            <a th:classappend="${#httpServletRequest.getRequestURI().endsWith(resource.id + '/') ? 'active':''}" target="_self" th:href="@{'/project/view/'+ ${resource.id}}">General</a>
+            <a th:classappend="${#httpServletRequest.getRequestURI().endsWith(urlId + '/') ? 'active':''}" target="_self" th:href="@{'/project/view/'+ ${urlId}}">General</a>
         </li>
         <li class="tab col s2">
-            <a th:classappend="${#httpServletRequest.getRequestURI().endsWith('/harvests/') ? 'active':''}" target="_self" th:href="@{'/project/view/' + ${resource.id}+'/harvests/'}">Harvests</a>
+            <a th:classappend="${#httpServletRequest.getRequestURI().endsWith('/harvests/') ? 'active':''}" target="_self" th:href="@{'/project/view/' + ${urlId}+'/harvests/'}">Harvests</a>
         </li>
         <li class="tab col s2">
-            <a target="_self" th:href="@{'/company/' + ${resource.id}+'/sales/'}">Sales</a>
+            <a target="_self" th:href="@{'/company/' + ${urlId}+'/sales/'}">Sales</a>
         </li>
     </ul>
 
