--- a/src/main/resources/templates/Company/viewCompany.html
+++ b/src/main/resources/templates/Company/viewCompany.html
@@ -37,9 +37,9 @@
         <div class="col l6 m6 s12">
             <div class="panel6">
                 <div class="panel_title">
-                    <h2>Main Company</h2>
+                    <h2>Holding</h2>
                 </div>
-                Name: <span th:text="${company.mainCompany.name}"></span><br/>
+                Name: <span th:text="${company.holding.name}"></span><br/>
             </div>
         </div>
     </div>
