--- a/src/main/resources/templates/common/header.html
+++ b/src/main/resources/templates/common/header.html
@@ -40,11 +40,11 @@
         <li class="bold">
             <ul class="collapsible collapsible-accordion">
                 <li>
-                    <a class="collapsible-header"><i class="petite material-icons">business</i>Main Companies<i class="material-icons right extend-menu">arrow_drop_down</i></a>
+                    <a class="collapsible-header"><i class="petite material-icons">business</i>Holding<i class="material-icons right extend-menu">arrow_drop_down</i></a>
                     <div class="collapsible-body">
                         <ul>
-                            <li class="sub-menu"><a th:href="@{/maincompany/}">All</a></li>
-                            <li class="sub-menu"><a th:href="@{/maincompany/add/}">Add</a></li>
+                            <li class="sub-menu"><a th:href="@{/holding/}">All</a></li>
+                            <li class="sub-menu"><a th:href="@{/holding/add/}">Add</a></li>
                         </ul>
                     </div>
                 </li>
@@ -54,7 +54,7 @@
         <li class="bold">
             <ul class="collapsible collapsible-accordion">
                 <li>
-                    <a class="collapsible-header"><i class="petite material-icons">business</i>Companies<i class="material-icons right">arrow_drop_down</i></a>
+                    <a class="collapsible-header"><i class="petite material-icons">location_city</i>Companies<i class="material-icons right">arrow_drop_down</i></a>
                     <div class="collapsible-body">
                         <ul>
                             <li class="sub-menu"><a th:href="@{/company/}">All</a></li>
