--- a/src/main/resources/templates/Company/company.html
+++ b/src/main/resources/templates/Company/company.html
@@ -15,7 +15,7 @@
                     <tr>
                         <th>ID</th>
                         <th>Name</th>
-                        <th>Main Company</th>
+                        <th>Holding</th>
                         <th>Actions</th>
                     </tr>
                     </thead>
@@ -23,7 +23,7 @@
                     <tr th:each="company : ${companies}">
                         <td th:text="${company.id}">undefined</td>
                         <td th:text="${company.name}">undefined</td>
-                        <td th:text="${company.mainCompany.name}">undefined</td>
+                        <td th:text="${company.holding.name}">undefined</td>
                         <td>
                             <a th:href="@{'/company/view/' + ${company.id}}" class="btn-floating btn-small waves-effect waves-light">
                                 <i class="material-icons">visibility</i>
