--- a/src/main/resources/templates/Holding/viewCompanyofHolding.html
+++ b/src/main/resources/templates/Holding/viewCompanyofHolding.html
@@ -4,35 +4,35 @@
 <div th:replace="common/head :: head"></div>
 <div th:replace="common/header :: header"></div>
 <main>
-    <div th:replace="common/headerMainCompany :: headerMainCompany"></div>
+    <div th:replace="common/headerHolding :: headerHolding"></div>
     <div class="row">
         <div class="col l12 m12 s12">
             <div class="panel6">
                 <div class="panel_title">
-                    <h2>Projects</h2>
+                    <h2>Companies</h2>
                 </div>
                 <table class="bordered highlight responsive-table">
                     <thead>
                     <tr>
                         <th>ID</th>
                         <th>Name</th>
-                        <th>Begin date</th>
-                        <th>End Date</th>
-                        <th>Company</th>
+                        <th>Main Company</th>
                         <th>Actions</th>
                     </tr>
                     </thead>
                     <tbody>
-                    <tr th:each="project : ${projects}">
-                        <td th:text="${project.id}">undefined</td>
-                        <td th:text="${project.name}">undefined</td>
-                        <td th:text="${project.beginDate != null} ? ${#temporals.format(project.beginDate,'dd/MM/yyyy')} : 'null value!'">undefined</td>
-                        <td th:text="${project.endDate != null} ?  ${project.endDate} : 'null value!'">undefined</td>
-                        <td th:text="${project.company.name}">undefined</td>
+                    <tr th:each="company : ${companies}">
+                        <td th:text="${company.id}">undefined</td>
+                        <td th:text="${company.name}">undefined</td>
+                        <td th:text="${company.holding.name}">undefined</td>
                         <td>
-                            <a th:href="@{'/project/view/' + ${project.id}}" class="btn-floating btn-small waves-effect waves-light">
+                            <a th:href="@{'/company/' + ${company.id}}" class="btn-floating btn-small waves-effect waves-light">
                                 <i class="material-icons">visibility</i>
                             </a>
+                            <a th:href="@{'/company/' + ${company.id}}" class="btn-floating btn-small waves-effect waves-light">
+                                <i class="material-icons">edit</i>
+                            </a>
+                            <a class="waves-effect waves-light btn modal-trigger" th:href="'#modal1' + ${company.id}">Modal</a>
                         </td>
                     </tr>
                     </tbody>
@@ -40,7 +40,7 @@
                 <div th:fragment="pagination" class="row center-align">
                     <ul class="pagination">
                         <li class="disabled"><a href="#!"><i class="material-icons">chevron_left</i></a></li>
-                        <li th:each="i:${#numbers.sequence(0, projects.totalPages -1)}" class="waves-effect">
+                        <li th:each="i:${#numbers.sequence(0, companies.totalPages -1)}" class="waves-effect">
                             <a th:href="@{${url}(page=${i+1})}" th:text="${i+1}"></a>
                         </li>
                         <li class="waves-effect"><a href="#!"><i class="material-icons">chevron_right</i></a></li>
@@ -51,11 +51,22 @@
     </div>
     <!--Add button-->
     <div class="fixed-action-btn horizontal">
-        <a th:href="@{/project/add/}" class="btn-floating btn-large waves-effect waves-light">
+        <a th:href="@{/company/add/}" class="btn-floating btn-large waves-effect waves-light">
             <i class="material-icons">add</i>
         </a>
     </div>
     <!-- end Add button-->
+    <!-- Modal Structure -->
+    <div id="modal1" class="modal">
+        <div class="modal-content">
+            <h4>Deleting Main Company ...</h4>
+            <p>Are you sure you want to delete this main company ?</p>
+        </div>
+        <div class="modal-footer">
+            <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Agree</a>
+        </div>
+    </div>
+    <!-- End Modal-->
 </main>
 
 <div th:replace="common/footer :: footer"></div>
