--- a/src/main/resources/templates/Holding/viewHarvestByHolding.html
+++ b/src/main/resources/templates/Holding/viewHarvestByHolding.html
@@ -4,7 +4,7 @@
 <div th:replace="common/head :: head"></div>
 <div th:replace="common/header :: header"></div>
 <main>
-    <div th:replace="common/headerMainCompany :: headerMainCompany"></div>
+    <div th:replace="common/headerHolding :: headerHolding"></div>
     <div class="row">
         <div class="col l12 m12 s12">
             <div class="panel6">
@@ -43,11 +43,11 @@
                 $body = $("body");
                 $.ajax({
                     type: 'GET',
-                    url: '/maincompany/view/'+ entityId + '/harvests/' + valueSelected,
+                    url: '/holding/view/'+ entityId + '/harvests/' + valueSelected,
                     timeout: 3000,
                     beforeSend: function() { $body.addClass("loading"); },
                     success: function (data) {
-                        $('#graph-content').load('/maincompany/view/'+ entityId + '/harvests/' + valueSelected);
+                        $('#graph-content').load('/holding/view/'+ entityId + '/harvests/' + valueSelected);
                     },
                     complete: function() { $body.removeClass("loading"); },
                     error: function () {
