--- a/src/main/resources/templates/common/header.html
+++ b/src/main/resources/templates/common/header.html
@@ -6,6 +6,9 @@
     <nav>
         <a href="#" data-activates="slide-out" class="button-collapse grey-text text-darken-3"><i class="material-icons">menu</i></a>
             <div class="right drop-pmenu">
+                <!-- Test personnal menu modern
+                <a class='dropdown-button btn' href="#" id="openpersonnalmenu" data-activates="slide-out"><i class="material-icons">menu</i></a>
+                -->
                 <a class='dropdown-button btn' href='#' data-activates='personnal-menu'>
                     <span sec:authentication="principal.user.firstname"></span>
                     <span sec:authentication="principal.user.lastname"></span>
@@ -16,7 +19,8 @@
                     <li class="divider"></li>
                     <li>
                         <form th:action="@{/logout}" method="post">
-                            <input type="submit" value="Sign Out"/>
+                            <!--<input type="submit" value="Sign Out"/>-->
+                            <a type="submit"><i class="material-icons">perm_identity</i>Logout</a>
                         </form>
                     </li>
                 </ul>
@@ -172,7 +176,23 @@
         </li>
         <!--End DropDown-->
     </ul>
-
+    <!--Test Personnal menu-->
+    <ul id="personnalmenu" class="side-nav">
+        <li><div class="user-view">
+            <div class="background">
+                <img src="images/office.jpg">
+            </div>
+            <a href="#!user"><img class="circle" src="images/yuna.jpg"></a>
+            <a href="#!name"><span class="white-text name">John Doe</span></a>
+            <a href="#!email"><span class="white-text email">jdandturk@gmail.com</span></a>
+        </div></li>
+        <li><a href="#!"><i class="material-icons">cloud</i>First Link With Icon</a></li>
+        <li><a href="#!">Second Link</a></li>
+        <li><div class="divider"></div></li>
+        <li><a class="subheader">Subheader</a></li>
+        <li><a class="waves-effect" href="#!">Third Link With Waves</a></li>
+    </ul>
+    <!--end test personnal menu-->
 </header>
 <!--Header, should be on all templates-->
 </html>
