--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -36,6 +36,18 @@
             </div>
         </div>
     </div>
+    <!-- Dropdown Trigger -->
+    <a class='dropdown-button btn' data-beloworigin="true" constrainWidth="true" href='#' data-activates='dropdown1'>Drop Me!</a>
+
+    <!-- Dropdown Structure -->
+    <ul id='dropdown1' class='dropdown-content'>
+        <li><a href="#!">one</a></li>
+        <li><a href="#!">two</a></li>
+        <li class="divider"></li>
+        <li><a href="#!">three</a></li>
+        <li><a href="#!"><i class="material-icons">view_module</i>four</a></li>
+        <li><a href="#!"><i class="material-icons">cloud</i>five</a></li>
+    </ul>
 </main>
 
 <div th:replace="common/footer :: footer"></div>
