--- a/src/main/resources/templates/common/header.html
+++ b/src/main/resources/templates/common/header.html
@@ -2,14 +2,16 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 <!--Header, should be on all templates-->
-<header th:fragment="header">
-    <nav>
-        <a href="#" data-activates="slide-out" class="button-collapse grey-text text-darken-3"><i class="material-icons">menu</i></a>
+
+<div th:fragment="header">
+    <header>
+        <nav>
+            <a href="#" data-activates="slide-out" class="button-collapse grey-text text-darken-3">
+                <i class="material-icons">menu</i>
+            </a>
             <div class="right drop-pmenu">
-                <!-- Test personnal menu modern
-                <a class='dropdown-button btn' href="#" id="openpersonnalmenu" data-activates="slide-out"><i class="material-icons">menu</i></a>
-                -->
-                <a class='dropdown-button btn' href='#' data-activates='personnal-menu'>
+
+                <a class='dropdown-button btn' data-beloworigin="true" constrainWidth="true" href='#' data-activates='personnal-menu'>
                     <span sec:authentication="principal.user.firstname"></span>
                     <span sec:authentication="principal.user.lastname"></span>
                 </a>
@@ -25,174 +27,58 @@
                     </li>
                 </ul>
             </div>
-    </nav>
+        </nav>
+       <!-- LEFT MENU-->
+        <ul id="slide-out" class="side-nav fixed">
+            <!-- LOGO-->
+            <a th:href="@{/}">
+                <div id="logo">
+                    <!--<img src="assets/img/logo_12Tree_resize.jpg">-->
+                </div>
+            </a>
+            <!-- END LOGO -->
+            <!-- Search TOOL-->
+            <div class="row">
+                <div class="input-field col s12">
+                    <i class="material-icons prefix">search</i>
+                    <input id="icon_prefix" type="text" class="autocomplete" />
+                    <label for="icon_prefix">Search</label>
+                </div>
+            </div>
+            <!-- End Search TOOL-->
+            <li class="no-padding">
+                <ul class="collapsible collapsible-accordion">
+                    <li>
+                        <a class="collapsible-header"><i class="petite material-icons">business</i>Holding<i class="material-icons right">arrow_drop_down</i></a>
+                        <div class="collapsible-body">
+                            <ul>
+                                <li class="sub-menu"><a th:href="@{/holding/}">All</a></li>
+                                <li class="sub-menu"><a th:href="@{/holding/add/}">Add</a></li>
+                            </ul>
+                        </div>
+                    </li>
+                </ul>
+            </li>
+            <li class="no-padding">
+                <ul class="collapsible collapsible-accordion">
+                    <li>
+                        <a class="collapsible-header"><i class="petite material-icons">location_city</i>Companies<i class="material-icons right">arrow_drop_down</i></a>
+                        <div class="collapsible-body">
+                            <ul>
+                                <li class="sub-menu"><a th:href="@{/company/}">All</a></li>
+                                <li class="sub-menu"><a th:href="@{/company/add/}">Add</a></li>
+                            </ul>
+                        </div>
+                    </li>
+                </ul>
+            </li>
+        </ul>
+        <!--Test Personnal menu-->
 
-    <ul id="slide-out" class="side-nav fixed">
-        <a th:href="@{/}">
-            <div id="logo">
-                <!--<img src="assets/img/logo_12Tree_resize.jpg">-->
-            </div>
-        </a>
-        <div class="row">
-            <div class="input-field col s12">
-                <i class="material-icons prefix">search</i>
-                <input id="icon_prefix" type="text" class="autocomplete" />
-                <label for="icon_prefix">Search</label>
-            </div>
-        </div>
-        <!--DropDown-->
-        <li class="bold">
-            <ul class="collapsible collapsible-accordion">
-                <li>
-                    <a class="collapsible-header"><i class="petite material-icons">business</i>Holding<i class="material-icons right extend-menu">arrow_drop_down</i></a>
-                    <div class="collapsible-body">
-                        <ul>
-                            <li class="sub-menu"><a th:href="@{/holding/}">All</a></li>
-                            <li class="sub-menu"><a th:href="@{/holding/add/}">Add</a></li>
-                        </ul>
-                    </div>
-                </li>
-            </ul>
-        </li>
-        <!--DropDown-->
-        <li class="bold">
-            <ul class="collapsible collapsible-accordion">
-                <li>
-                    <a class="collapsible-header"><i class="petite material-icons">location_city</i>Companies<i class="material-icons right">arrow_drop_down</i></a>
-                    <div class="collapsible-body">
-                        <ul>
-                            <li class="sub-menu"><a th:href="@{/company/}">All</a></li>
-                            <li class="sub-menu"><a th:href="@{/company/add/}">Add</a></li>
-                        </ul>
-                    </div>
-                </li>
-            </ul>
-        </li>
-        <!--End DropDown-->
-        <!--DropDown-->
-        <li class="bold">
-            <ul class="collapsible collapsible-accordion">
-                <li>
-                    <a class="collapsible-header"><i class="petite material-icons">work</i>Projects<i class="material-icons right">arrow_drop_down</i></a>
-                    <div class="collapsible-body">
-                        <ul>
-                            <li class="sub-menu"><a th:href="@{/project/}">All</a></li>
-                            <li class="sub-menu"><a th:href="@{/project/add/}">Add</a></li>
-                        </ul>
-                    </div>
-                </li>
-            </ul>
-        </li>
-        <!--End DropDown-->
-        <!--DropDown-->
-        <li class="bold">
-            <ul class="collapsible collapsible-accordion">
-                <li>
-                    <a class="collapsible-header"><i class="petite material-icons">location_on</i>Plots<i class="material-icons right">arrow_drop_down</i></a>
-                    <div class="collapsible-body">
-                        <ul>
-                            <li class="sub-menu"><a th:href="@{/plot/}">All</a></li>
-                            <li class="sub-menu"><a th:href="@{/plot/map/}">All (map)</a></li>
-                            <li class="sub-menu"><a th:href="@{/plot/add/}">Add</a></li>
-                        </ul>
-                    </div>
-                </li>
-            </ul>
-        </li>
-        <!--End DropDown-->
-        <!--DropDown-->
-        <li class="bold">
-            <ul class="collapsible collapsible-accordion">
-                <li>
-                    <a class="collapsible-header"><i class="petite material-icons">spa</i>Resource<i class="material-icons right">arrow_drop_down</i></a>
-                    <div class="collapsible-body">
-                        <ul>
-                            <li class="sub-menu"><a th:href="@{/resource/}">All</a></li>
-                            <li class="sub-menu"><a th:href="@{/resource/add/}">Add</a></li>
-                        </ul>
-                    </div>
-                </li>
-            </ul>
-        </li>
-        <!--End DropDown-->
-        <!--DropDown-->
-        <li class="bold">
-            <ul class="collapsible collapsible-accordion">
-                <li>
-                    <a class="collapsible-header"><i class="petite material-icons">swap_calls</i>Harvests<i class="material-icons right">arrow_drop_down</i></a>
-                    <div class="collapsible-body">
-                        <ul>
-                            <li class="sub-menu"><a th:href="@{/harvest/}">All</a></li>
-                            <li class="sub-menu"><a th:href="@{/harvest/add/}">Add</a></li>
-                        </ul>
-                    </div>
-                </li>
-            </ul>
-        </li>
-        <!--End DropDown-->
-        <!--DropDown-->
-        <li class="bold">
-            <ul class="collapsible collapsible-accordion">
-                <li>
-                    <a class="collapsible-header"><i class="petite material-icons">shopping_cart</i>Sales<i class="material-icons right">arrow_drop_down</i></a>
-                    <div class="collapsible-body">
-                        <ul>
-                            <li class="sub-menu"><a href="#!">Check All</a></li>
-                            <li class="sub-menu"><a href="#!">Find one</a></li>
-                        </ul>
-                    </div>
-                </li>
-            </ul>
-        </li>
-        <!--End DropDown-->
-        <!--DropDown-->
-        <li class="bold">
-            <ul class="collapsible collapsible-accordion">
-                <li>
-                    <a class="collapsible-header"><i class="petite material-icons">report_problem</i>Alerts<i class="material-icons right">arrow_drop_down</i></a>
-                    <div class="collapsible-body">
-                        <ul>
-                            <li class="sub-menu"><a href="#!">Check All</a></li>
-                            <li class="sub-menu"><a href="#!">Find one</a></li>
-                        </ul>
-                    </div>
-                </li>
-            </ul>
-        </li>
-        <!--End DropDown-->
-        <!--DropDown-->
-        <li class="bold">
-            <ul class="collapsible collapsible-accordion">
-                <li>
-                    <a class="collapsible-header"><i class="petite material-icons">supervisor_account</i>Users<i class="material-icons right">arrow_drop_down</i></a>
-                    <div class="collapsible-body">
-                        <ul>
-                            <li class="sub-menu"><a href="#!">Check All</a></li>
-                            <li class="sub-menu"><a href="#!">Find one</a></li>
-                        </ul>
-                    </div>
-                </li>
-            </ul>
-        </li>
-        <!--End DropDown-->
-    </ul>
-    <!--Test Personnal menu-->
-    <ul id="personnalmenu" class="side-nav">
-        <li><div class="user-view">
-            <div class="background">
-                <img src="images/office.jpg">
-            </div>
-            <a href="#!user"><img class="circle" src="images/yuna.jpg"></a>
-            <a href="#!name"><span class="white-text name">John Doe</span></a>
-            <a href="#!email"><span class="white-text email">jdandturk@gmail.com</span></a>
-        </div></li>
-        <li><a href="#!"><i class="material-icons">cloud</i>First Link With Icon</a></li>
-        <li><a href="#!">Second Link</a></li>
-        <li><div class="divider"></div></li>
-        <li><a class="subheader">Subheader</a></li>
-        <li><a class="waves-effect" href="#!">Third Link With Waves</a></li>
-    </ul>
-    <!--end test personnal menu-->
-</header>
-<!--Header, should be on all templates-->
+        <!--end test personnal menu-->
+    </header>
+    <!--Header, should be on all templates-->
+</div>
+
+
 </html>
